--- a/src/app/todos/todos.page.html
+++ b/src/app/todos/todos.page.html
@@ -1,9 +1,52 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>todos</ion-title>
+  <ion-toolbar color="danger">
+    <ion-title>My ToDos</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+  <ion-card *ngIf="todos.length == 0">
+    <ion-card-header>
+      <ion-card-subtitle>
+        No ToDos Created!
+      </ion-card-subtitle>
+    </ion-card-header>
+  </ion-card>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button color="danger" (click)="create()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <ion-list lines="none">
+    <ion-item-sliding *ngFor="let todo of todos">
+      <ion-item no-padding>
+        <ion-card>
+          <ion-card-content>
+            <ion-label>
+              <h2> {{ todo.data().todo_title }} </h2>
+              <h3> {{ todo.data().todo_description }} </h3>
+              <p> {{ todo.data().todo_finish_date.toDate() }} </p>
+            </ion-label>
+          </ion-card-content>
+        </ion-card>
+      </ion-item>
+
+      <ion-item-options side="start">
+        <ion-item-option color="secondary" (click)="markCompleted(todo)">
+          <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="delete(todo)">
+          <ion-icon name="trash" slot="icon-only"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+
+    </ion-item-sliding>
+  </ion-list>
 
 </ion-content>
